--- a/controller/index.html
+++ b/controller/index.html
@@ -18,10 +18,23 @@
       canvas {
           display: block
       }
+      input {
+	  display: none;
+	  width: 50%;
+	  z-index: 1;
+	  position: absolute;
+	  bottom: 50%;
+	  right: 20%;
+	  font-size: 22px;
+	  border: 4px solid #84dbfd;
+	  border-radius: 8px;
+	  padding: 5px 20px;
+      }
     </style>
   </head>
   <body>
     <canvas></canvas>
+    <input id="textinput" type="text"></input>
     <!-- <script type="module" src="app.js"></script> -->
     <!-- <script mimetype="application/js" type="module" src="init.js"></script> -->
     <script type="module" src="./index.js"></script>
