--- a/controller/index.html
+++ b/controller/index.html
@@ -24,12 +24,15 @@
 	  z-index: 1;
 	  position: absolute;
 	  bottom: 50%;
-	  right: 20%;
 	  font-size: 22px;
 	  border: 4px solid #84dbfd;
 	  border-radius: 8px;
-	  padding: 5px 20px;
+	  padding: 5px 35px;
+          background: url("/resources/password_icon.png") no-repeat left, lightgray;
+          background-size: 20px;
+          background-position: 10px;
       }
+
     </style>
   </head>
   <body>
